Well apparently last commit was not final

--- a/temp.html
+++ b/temp.html
@@ -17,7 +17,7 @@
     <div class="msg"></div>
     <div><input type="password" name="password2" placeholder="Confirm Password"class = "Logger" id="pass2" onfocus="g()"></div> <br> 
     <div class="msg2"></div>
-    <div><input type="Submit" name="login" value = "Sign Up" class = "Logger-button" ></div> 
+    <div><input type="Submit" name="login" value = "Sign Up" class = "Logger-button" onclick='window.location.reload(true);'></div>
     <p>Already have an account? <a href="log.html"> Signin</a></p> 
 </form>
 </body>
